<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/FragmentStyle" >

    <TextView
        android:id="@+id/birthdayTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/setup1_birthday_textview"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:width="@dimen/setup1_textview_width" />

    <EditText
        android:id="@+id/birthdayEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/birthdayTextView"
        android:layout_marginLeft="@dimen/horizontal_space"
        android:layout_toRightOf="@+id/birthdayTextView"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="date" />

    <TextView
        android:id="@+id/genderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/birthdayEditText"
        android:layout_marginTop="@dimen/vertical_space"
        android:text="@string/setup1_gender_textview"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:width="@dimen/setup1_textview_width" />

    <Spinner
        android:id="@+id/genderSpinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/genderTextView"
        android:layout_marginLeft="@dimen/horizontal_space"
        android:layout_toRightOf="@+id/genderTextView"
        android:entries="@array/gender" />

    <TextView
        android:id="@+id/heightTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/genderSpinner"
        android:layout_marginTop="@dimen/vertical_space"
        android:text="@string/setup1_height_textview"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:width="@dimen/setup1_textview_width" />

    <EditText
        android:id="@+id/heightEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/heightTextView"
        android:layout_marginLeft="@dimen/horizontal_space"
        android:layout_toRightOf="@+id/heightTextView"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/weightTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/heightEditText"
        android:layout_marginTop="@dimen/vertical_space"
        android:text="@string/setup1_weight_textview"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:width="@dimen/setup1_textview_width" />

    <EditText
        android:id="@+id/weightEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/weightTextView"
        android:layout_marginLeft="@dimen/horizontal_space"
        android:layout_toRightOf="@+id/weightTextView"
        android:ems="10"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:minWidth="82dp"
        android:text="@string/setup1_next_button" />

</RelativeLayout>